--- a/detail.html
+++ b/detail.html
@@ -82,18 +82,26 @@
             <p>个人年份: 4</p>
         </div>
         <h3 class="subTitle">名字图表</h3>
-        <div class="subArea">
-            <p>表现数字: 4</p>
-            <p>内在驱策力: 4</p>
-            <p>个人特质: 4</p>
-            <p>成熟数字: 4</p>
+        <div class="subArea subAreaFlex">
+            <div>
+                <p>表现数字: 4</p>
+                <p>内在驱策力: 4</p>
+            </div>
+            <div>
+                <p>个人特质: 4</p>
+                <p>成熟数字: 4</p>
+            </div>
         </div>
         <h3 class="subTitle">性情气质</h3>
-        <div class="subArea">
-            <p>头脑: 4</p>
-            <p>情绪: 4</p>
-            <p>身体: 4</p>
-            <p>直觉: 4</p>
+        <div class="subArea subAreaFlex">
+            <div>
+                <p>头脑: 4</p>
+                <p>情绪: 4</p>
+            </div>
+            <div>
+                <p>身体: 4</p>
+                <p>直觉: 4</p>
+            </div>
         </div>
         <h3 class="subTitle">什么是生命数字？</h3>
         <div class="subArea subArea2">
