--- a/detail.html
+++ b/detail.html
@@ -29,78 +29,101 @@
         </div>
         <div class="spaceArea ">
             <div class="triangleUp">
-                <b>3</b>
-                <i>1111</i>
+                <b id="v"></b>
+                <i id="v1"></i>~
             </div>
             <div class="triangleUp">
-                <b>3</b>
-                <i>1111</i>
+                <b id="g"></b>
+                <i id="g1"></i>~<i id="g2"></i>
             </div>
             <div class="triangleUp">
-                <b>3</b>
-                <i>1111</i>
+                <b id="e"></b>
+                <i id="e1"></i>~<i id="e2"></i>
             </div>
             <div class="triangleUp">
-                <b>3</b>
-                <i>1111</i>
+                <b id="f"></b>
+                <i id="f1"></i>~<i id="f2"></i>
             </div>
         </div>
         <div class="spaceArea ">
             <div class="rectangle">
-                <i>11</i>
+                <i id="a">11</i>
             </div>
             <div class="rectangle">
-                <i>11</i>
+                <i id="b">11</i>
             </div>
             <div class="rectangle">
-                <i>11</i>
+                <i id="c">11</i>
             </div>
             <div class="rectangle">
-                <i>11/11/11</i>
+                <i id="d">11</i>
             </div>
         </div>
         <div class="spaceArea ">
             <div class="triangleDown">
-                <i>11</i>
+                <i id="h">11</i>
             </div>
             <div class="triangleDown">
-                <i>11</i>
+                <i id="i">11</i>
             </div>
             <div class="triangleDown">
-                <i>11</i>
+                <i id="j">11</i>
             </div>
             <div class="triangleDown">
-                <i>11</i>
+                <i id="k">11</i>
             </div>
         </div>
         <div class="clr"></div>
         <div class="blockArea"></div>
         <div class="subArea">
-            <p>黑洞数字: 4</p>
+            <p>黑洞数字:
+                <font id="u">无</font>
+            </p>
         </div>
         <div class="subArea">
-            <p>个人年份: 4</p>
+            <p>个人年份:
+                <font id="l"></font>
+                (
+                <font id="l1"></font>~
+                <font id="l2"></font>)
+            </p>
         </div>
         <h3 class="subTitle">名字图表</h3>
         <div class="subArea subAreaFlex">
             <div>
-                <p>表现数字: 4</p>
-                <p>内在驱策力: 4</p>
+                <p>表现数字:
+                    <font id="m"></font>
+                </p>
+                <p>内在驱策力:
+                    <font id="n"></font>
+                </p>
             </div>
             <div>
-                <p>个人特质: 4</p>
-                <p>成熟数字: 4</p>
+                <p>个人特质:
+                    <font id="o"></font>
+                </p>
+                <p>成熟数字:
+                    <font id="p"></font>
+                </p>
             </div>
         </div>
         <h3 class="subTitle">性情气质</h3>
         <div class="subArea subAreaFlex">
             <div>
-                <p>头脑: 4</p>
-                <p>情绪: 4</p>
+                <p>头脑:
+                    <font id="q"></font>
+                </p>
+                <p>情绪:
+                    <font id="r"></font>
+                </p>
             </div>
             <div>
-                <p>身体: 4</p>
-                <p>直觉: 4</p>
+                <p>身体:
+                    <font id="s"></font>
+                </p>
+                <p>直觉:
+                    <font id="t"></font>
+                </p>
             </div>
         </div>
         <h3 class="subTitle">什么是生命数字？</h3>
