--- a/detail.html
+++ b/detail.html
@@ -30,19 +30,21 @@
         <div class="spaceArea ">
             <div class="triangleUp">
                 <b id="v"></b>
-                <i id="v1"></i>~
+                <font id="age4"><i id="v1"></i>~</font>
             </div>
             <div class="triangleUp">
                 <b id="g"></b>
-                <i id="g1"></i>~<i id="g2"></i>
+                <font id="age3"><i id="g1"></i>~<i id="g2"></i></font>
             </div>
             <div class="triangleUp">
                 <b id="e"></b>
-                <i id="e1"></i>~<i id="e2"></i>
+                <font id="age1"><i id="e1"></i>~<i id="e2"></i></font>
+
             </div>
             <div class="triangleUp">
                 <b id="f"></b>
-                <i id="f1"></i>~<i id="f2"></i>
+                <font id="age2"><i id="f1"></i>~<i id="f2"></i></font>
+
             </div>
         </div>
         <div class="spaceArea ">
