--- a/detail.html
+++ b/detail.html
@@ -17,13 +17,9 @@
 
     <div class="resultArea" id="resultArea">
         <h3 class="subTitle">地图详情</h3>
-        <div class="subArea">
-            <p>您的姓名:
+        <div class="subArea" style="border: none;">
+            <p>您的姓名/生日:
                 <font id="userNameR"></font>
-            </p>
-        </div>
-        <div class="subArea">
-            <p>您的生日:
                 <font id="pickerR"></font>
             </p>
         </div>
