--- a/detail.html
+++ b/detail.html
@@ -136,7 +136,8 @@
 
 
     <script src="lib/js/jquery.js"></script>
-    <script src="js/pinyin.js"></script>
+    <script src="lib/js/pinyin_dict_notone.js"></script>
+    <script src="lib/js/pinyinUtil.js"></script>
     <script src="js/detail.js"></script>
 </body>
 
