--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <img src="img/date.png">
             <input type="text" placeholder="您的出生日期" readonly id="picker" />
         </div>
+        <div>
+            <img src="img/pinyin.png">
+            <input type="text" placeholder="您的姓名拼音" maxlength="100" id="userNamePinyin" />
+        </div>
         <button class="btn" id="submitBtn">点击进入生命地图</button>
         <div id="historyArea">
             <h3>查询历史</h3>
@@ -40,6 +44,8 @@
     <div id="datePickerTargetContainer"></div>
 
     <script src="lib/js/jquery.js"></script>
+    <script src="lib/js/pinyin_dict_notone.js"></script>
+    <script src="lib/js/pinyinUtil.js"></script>
     <script src="lib/datepicker/dateSelector.js"></script>
     <script src="js/index.js"></script>
 </body>
