--- a/detail.html
+++ b/detail.html
@@ -32,7 +32,7 @@
                 <b id="g"></b>
                 <font id="age3"><i id="g1"></i>~<i id="g2"></i></font>
             </div>
-            <div class="triangleUp">
+            <div class="triangleUp" id="detail1">
                 <b id="e"></b>
                 <font id="age1"><i id="e1"></i>~<i id="e2"></i></font>
 
@@ -132,6 +132,18 @@
             <p>每件事情发生的背后都有它的美</p>
         </div>
         <a class="againBtn" id="againBtn">再测一次</a>
+    </div>
+
+    <div class="dialogWrap" id="dialog">
+        <div class="dialogOverlay"></div>
+        <div class="dialog">
+            <div class="content" id="dialogContent">
+
+            </div>
+            <div class="oper">
+                <a id="closeDialog">知道了</a>
+            </div>
+        </div>
     </div>
 
 
