增加下划线

--- a/detail.html
+++ b/detail.html
@@ -33,7 +33,7 @@
                 <font id="age3"><i id="g1"></i>~<i id="g2"></i></font>
             </div>
             <div class="triangleUp" id="detail1">
-                <b id="e"></b>
+                <b id="e" class="line"></b>
                 <font id="age1"><i id="e1"></i>~<i id="e2"></i></font>
 
             </div>
