--- a/detail.html
+++ b/detail.html
@@ -32,8 +32,8 @@
                 <b id="g"></b>
                 <font id="age3"><i id="g1"></i>~<i id="g2"></i></font>
             </div>
-            <div class="triangleUp" id="detail1">
-                <b id="e" class="line"></b>
+            <div class="triangleUp" >
+                <b id="e"></b>
                 <font id="age1"><i id="e1"></i>~<i id="e2"></i></font>
 
             </div>
@@ -92,7 +92,7 @@
                 <p>表现数字:
                     <font id="m"></font>
                 </p>
-                <p>内在驱策力:
+                <p id="detail1"  class="line">内在驱策力:
                     <font id="n"></font>
                 </p>
             </div>
